2009-03-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added missing prefix dir.
	* src/download_helper.cc
	
2009-03-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed --direct-file-mapping option and CopyDiskAdaptor.
	* src/CopyDiskAdaptor.cc: Removed
	* src/CopyDiskAdaptor.h: Removed
	* src/DefaultPieceStorage.cc
	* src/Makefile.am
	* src/OptionHandlerFactory.cc
	* src/prefs.cc
	* src/prefs.h
	* src/usage_text.h
	* test/CopyDiskAdaptorTest.cc: Removed
	* test/Makefile.am

2009-03-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Rewritten isSameFileBeingDownloaded()
	* src/RequestGroupMan.cc

2009-03-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed getName() from DownloadContext. getName() is declared in
	BtContext.
	* src/BtContext.h
	* src/DownloadContext.h
	* src/SingleFileDownloadContext.cc
	* src/SingleFileDownloadContext.h
		
	Removed getFilePath() from DiskAdaptor. getFilePath() is declared
	in AbstractSingleDiskAdaptor.
	* src/AbstractSingleDiskAdaptor.h
	* src/DiskAdaptor.h
	* src/MultiDiskAdaptor.h
	* src/RequestGroup.cc
	
	Removed setTopDir() and getTopDir() and getTopDirPath() from
	MultiDiskAdaptor.
	* src/DefaultPieceStorage.cc
	* src/MultiDiskAdaptor.cc
	* src/MultiDiskAdaptor.h
	* test/MultiDiskAdaptorTest.cc
	
2009-03-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	FileEntry::getPath() contains store(top level) directory to
	simplify path handling operation.  In the previous implementation,
	store directory is concatenated to FileEntry::getPath() in
	DownloadContext.
	* src/BtDependency.cc
	* src/BtPostDownloadHandler.cc
	* src/CopyDiskAdaptor.cc
	* src/DefaultBtContext.cc
	* src/DirectDiskAdaptor.cc
	* src/FileEntry.cc
	* src/FileEntry.h
	* src/FtpNegotiationCommand.cc
	* src/HttpResponse.cc
	* src/HttpResponseCommand.cc
	* src/Metalink2RequestGroup.cc
	* src/MultiDiskAdaptor.cc
	* src/MultiDiskAdaptor.h
	* src/MultiFileAllocationIterator.cc
	* src/RequestGroup.cc